# ATAC-Seq

./: .gitignore  Dockerfile  Makefile  README.md  atac.yml  pyproject.toml  strucuture.txt
src/atacseq/: __main__.py  utils.py
src/atacseq/processing/: __main__.py  align_reads.py  analysis.py  cutadapt_trim.py  preprocessing.py  samtools_index.py  samtools_sort.py
src/atacseq/streaming/: __main__.py  encode_fetch.py  s3_upload.py
